# palindrome-checker-starter

./: README.md
.github/workflows/: build.yml
config/: gatorgrade.yml
palindromechecker/: .ruff.toml  pyproject.toml
palindromechecker/palindromechecker/: main.py  palindrome.py  util.py
palindromechecker/tests/: test_main.py  test_palindrome.py  test_util.py
writing/: reflection.md
